# awesome_api_lokal_indonesia

./: README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/awesome_api_lokal_indonesia/: pubspec.yaml
package/awesome_api_lokal_indonesia/example/: awesome_api_lokal_indonesia_example.dart
package/awesome_api_lokal_indonesia/lib/: awesome_api_lokal_indonesia.dart
package/awesome_api_lokal_indonesia/test/: awesome_api_lokal_indonesia_test.dart
package/awesome_api_lokal_indonesia_android/: pubspec.yaml
package/awesome_api_lokal_indonesia_android/lib/: awesome_api_lokal_indonesia_android.dart
package/awesome_api_lokal_indonesia_android/test/: awesome_api_lokal_indonesia_android_test.dart
package/awesome_api_lokal_indonesia_apis/: pubspec.yaml
package/awesome_api_lokal_indonesia_apis/example/: awesome_api_lokal_indonesia_apis_example.dart
package/awesome_api_lokal_indonesia_apis/lib/: awesome_api_lokal_indonesia_apis.dart
package/awesome_api_lokal_indonesia_apis/test/: awesome_api_lokal_indonesia_apis_test.dart
package/awesome_api_lokal_indonesia_cli/: pubspec.yaml
package/awesome_api_lokal_indonesia_cli/example/: awesome_api_lokal_indonesia_cli_example.dart
package/awesome_api_lokal_indonesia_cli/lib/: awesome_api_lokal_indonesia_cli.dart
package/awesome_api_lokal_indonesia_cli/test/: awesome_api_lokal_indonesia_cli_test.dart
package/awesome_api_lokal_indonesia_client/: README.md  pubspec.yaml
package/awesome_api_lokal_indonesia_client/example/: awesome_api_lokal_indonesia_client_example.dart
package/awesome_api_lokal_indonesia_dart/: pubspec.yaml
package/awesome_api_lokal_indonesia_flutter/: pubspec.yaml
package/awesome_api_lokal_indonesia_fucshia/: pubspec.yaml
package/awesome_api_lokal_indonesia_ios/: pubspec.yaml
package/awesome_api_lokal_indonesia_linux/: pubspec.yaml
package/awesome_api_lokal_indonesia_macos/: pubspec.yaml
package/awesome_api_lokal_indonesia_server/: pubspec.yaml
package/awesome_api_lokal_indonesia_web/: pubspec.yaml
package/awesome_api_lokal_indonesia_windows/: pubspec.yaml
test/: awesome_api_lokal_indonesia_test.dart
(+22 files in other folders)
